minor update to vignette to pass CHECK
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/medichi@8 e4590f35-bc9a-4bad-90ff-f3f982ab8841

--- a/pkg/inst/doc/MeDiChI.Rnw
+++ b/pkg/inst/doc/MeDiChI.Rnw
@@ -10,7 +10,7 @@
 
 \usepackage[authoryear,round]{natbib}
 \usepackage{times}
-\usepackage{comment}
+%\usepackage{comment}
 
 \textwidth=6.2in
 \textheight=8.5in
